--- a/05_events.html
+++ b/05_events.html
@@ -5,6 +5,15 @@
     <script src="05_events.js"></script>
     <title>Document</title>
 </head>
+<style>
+    div {
+        width: 100px;
+        height: 100px;
+        background-color: navy;
+        margin: 10px;
+    }
+</style>
 <body onload="main()">
+    <div></div>
 </body>
 </html>
