--- a/06_animations.html
+++ b/06_animations.html
@@ -5,7 +5,14 @@
     <script src="06_animations.js"></script>
     <title>Document</title>
 </head>
+<!-- <style>
+    #container {
+        width: 100px;
+        height: 100px;
+        background-color: darkblue;
+    }
+</style> -->
 <body onload="main()">
-
+    <!-- <div id="container"></div> -->
 </body>
 </html>
